// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell Component should match a snapshot with full props 1`] = `
<ElTableCell
  className="foo-bar el-table-cell-has-dark-text el-table-narrow-cell-is-full-width el-table-cell-narrow-order1"
>
  <Icon
    icon="addSystem"
    intent="secondary"
  />
  <ElTableCellContent
    data-narrow-label="Label"
  />
</ElTableCell>
`;

exports[`TableCell Component should match a snapshot with no props 1`] = `
<ElTableCell
  className=""
>
  <ElTableCellContent />
</ElTableCell>
`;

exports[`TableCtaTriggerCell Component should match a snapshot with children and no icon 1`] = `
<ElTableCtaCell>
  <div>
    I am a child
  </div>
</ElTableCtaCell>
`;

exports[`TableCtaTriggerCell Component should match a snapshot with no children and an icon 1`] = `
<ElTableCtaCell>
  <ElTableCtaIconContainer>
    <Icon
      fontSize="1.2rem"
      icon="addSystem"
      intent="primary"
    />
  </ElTableCtaIconContainer>
</ElTableCtaCell>
`;

exports[`TableCtaTriggerCell Component should match a snapshot with no children and no icon 1`] = `<ElTableCtaCell />`;

exports[`TableExpandableRow Component should match a snapshot when not open 1`] = `
<ElTableExpandableRow
  className="el-is-active"
>
  <ElTableExpandableContainer />
</ElTableExpandableRow>
`;

exports[`TableExpandableRow Component should match a snapshot when open 1`] = `
<ElTableExpandableRow
  className="el-is-active"
>
  <ElTableExpandableContainer />
</ElTableExpandableRow>
`;

exports[`TableExpandableRowTriggerCell Component should match a snapshot with children 1`] = `
<ElTableExpandableRowTriggerCell
  className=""
>
  <div>
    I am a child
  </div>
</ElTableExpandableRowTriggerCell>
`;

exports[`TableExpandableRowTriggerCell Component should match a snapshot with no children and closed 1`] = `
<ElTableExpandableRowTriggerCell
  className=""
>
  <Icon
    icon="downSolidSystem"
    intent="secondary"
  />
</ElTableExpandableRowTriggerCell>
`;

exports[`TableExpandableRowTriggerCell Component should match a snapshot with no children and open 1`] = `
<ElTableExpandableRowTriggerCell
  className="el-table-narrow-cell-is-full-width"
>
  <Icon
    icon="upSolidSystem"
    intent="primary"
  />
</ElTableExpandableRowTriggerCell>
`;

exports[`TableHeader Component should match a snapshot 1`] = `<ElTableHeader />`;

exports[`TableHeadersRow Component should match a snapshot 1`] = `<ElTableHeadersRow />`;

exports[`TableRow Component should match a snapshot 1`] = `<ElTableRow />`;

exports[`TableRowContainer Component should match a snapshot when not open 1`] = `
<ElTableRowContainer
  className="el-is-active"
/>
`;

exports[`TableRowContainer Component should match a snapshot when open 1`] = `
<ElTableRowContainer
  className="el-is-active"
/>
`;
